gatewayclass.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: bavrio-ext-reg-gwclass
spec:
  controllerName: gke-l7-regional-external-managed
