deployment-one.yaml


  apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-one
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports: 
          - containerPort: 80
        volumeMounts:
        - name: config-1
          mountPath: /usr/share/nginx/html
      volumes:
      - name: config-1
        configMap:
          name: configmap-one

---

apiVersion: v1
kind: Service
metadata:
  name: nginx1-service
  labels :
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: my-service
      port: 80
      targetPort: 80
