deployment-three.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-three
  namespace: demo
spec:
  replicas: 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports: 
          - containerPort: 80
        volumeMounts:
        - name: config-1
          mountPath: /usr/share/nginx/html
      volumes:
      - name: config-1
        configMap:
          name: configmap-three

---

apiVersion: v1
kind: Service
metadata:
  name: nginx3service
  namespace: demo
  labels :
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: myservice3
      protocol: TCP
      port: 80
      targetPort: 80
