deployment-two.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-two
  namespace: namespace2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports: 
          - containerPort: 80
        volumeMounts:
        - name: config-2
          mountPath: /usr/share/nginx/html  #/two used for path mount
      volumes:
      - name: config-2
        configMap:
          name: configmap-two


---

apiVersion: v1
kind: Service
metadata:
  name: nginx2service
  namespace: namespace2
  labels :
    app: nginx2
spec:
  type: ClusterIP
  selector:
    app: nginx2
  ports:
    - name: myservice2
      protocol: TCP
      port: 80
