gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-httproute
  namespace: demo
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "nginx-service1.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /login
    backendRefs:
    - name: nginx1-service.demo.svc.cluster.local
      port: 8080
  hostnames:
  - "nginx-service2.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /login
    backendRefs:
    - name: nginx2-service.demo.svc.cluster.local
      port: 8080
  hostnames:
  - "nginx-service3.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /login
    backendRefs:
    - name: nginx3-service.demo.svc.cluster.local
      port: 80
