httproute-pathspecific.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx1route
  namespace: namespace1
spec:
  parentRefs:
  - kind: Gateway
    name: test-ext-reg-httpgw
    namespace: default
  hostnames:
  - "nginxservice.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx1service
      namespace: namespace1
      port: 80
  
---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx2route
  namespace: namespace2
spec:
  parentRefs:
  - kind: Gateway
    name: test-ext-reg-httpgw
    namespace: default
  hostnames:
  - "nginxservice.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /two
    backendRefs:
    - name: nginx2service
      namespace: namespace2
      port: 80

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx3route
  namespace: namespace3
spec:
  parentRefs:
  - kind: Gateway
    name: test-ext-reg-httpgw
    namespace: default
  hostnames:
  - "nginxservice.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /two
    backendRefs:
    - name: nginx2service
      namespace: namespace3
      port: 80
