ingress-one.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: demo
spec:
  rules:
  - host: "nginxservice1.com"
    http:
      paths:
      - pathType: Prefix
        path: "/nginx1service"
        backend:
          service:
            name: nginx1service
            port:
              number: 80
  - host: "nginxservice2.com"
    http:
      paths:
      - pathType: Prefix
        path: "/nginx2service"
        backend:
          service:
            name: nginx2service
            port:
              number: 80
  - host: "nginxservice3.com"
    http:
      paths:
      - pathType: Prefix
        path: "/nginx3service"
        backend:
          service:
            name: nginx3service
            port:
              number: 80
